Flow addition and State handling update
+ flow support
+ fie for selection page
+ file for info page
+ full button click support with only turn and stage dependancies
+versatility and bug fixes

--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "build": "babel src/ -d lib/",
+    "prepublish": "npm run build",
+    "flow": "flow"
   },
   "dependencies": {
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-sound": "^0.8.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.44.2"
   }
 }
