--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
+    "react-native-blur": "^3.0.0",
     "react-native-sound": "^0.10.0",
     "react-native-swiper": "^1.5.4"
   },
