--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "^0.44.0",
     "react-native-blur": "^3.0.0",
     "react-native-sound": "^0.10.0",
-    "react-native-swiper": "^1.5.4"
+    "react-native-swiper": "^1.5.4",
+    "react-native-vector-icons": "^4.2.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.0",
@@ -21,5 +22,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "rnpm": { "assets": [ "resources/fonts" ] }
 }
