--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "jest": {
     "preset": "react-native"
   },
-  "rnpm": { "assets": [ "resources/fonts" ] }
+  "rnpm": {
+    "assets": [
+      "resources/fonts"
+    ]
+  }
 }
