--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
+    "react": "^16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-native-blur": "^3.0.0",
     "react-native-sound": "^0.10.0",
