--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-background-geolocation')
     compile project(':react-native-blur')
     compile project(':react-native-vector-icons')
     compile project(':react-native-sound')
