--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -34,7 +34,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app requires background tracking</string>
+	<string>This app requires continuous tracking</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Accelerometer use increases battery efficiency by intelligently toggling location-tracking	</string>
 	<key>UIAppFonts</key>
