--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-background-geolocation": "^2.8.4",
     "react-native-keep-awake": "^2.0.4",
     "react-native-sound": "^0.10.3",
     "react-native-swiper": "^1.5.4",
