--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -37,6 +37,8 @@
 	<string>This app requires continuous tracking</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Accelerometer use increases battery efficiency by intelligently toggling location-tracking	</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<string>To determine validity of linked URLs</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
