--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -20,6 +20,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<string>To determine validity of linked URLs</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -33,12 +35,10 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app requires continuous tracking</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app requires location tracking</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Accelerometer use increases battery efficiency by intelligently toggling location-tracking	</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<string>To determine validity of linked URLs</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
