--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.46.4",
     "react-native-background-geolocation": "^2.8.4",
     "react-native-keep-awake": "^2.0.4",
+    "react-native-photo-view": "^1.3.0",
     "react-native-sound": "^0.10.3",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.2.0"
