--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.50.3",
+    "react-native": "^0.51.0",
     "react-native-background-geolocation": "^2.10.1",
     "react-native-blur": "^3.2.2",
     "react-native-keep-awake": "^2.0.6",
