Macbook Pro Config
Pre iphone xr xs and xs max update

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,36 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-sound')
+    compile project(':react-native-keep-awake')
+    compile project(':react-native-blur')
+    compile project(':react-native-background-geolocation')
     compile project(':react-native-blur')
     compile project(':react-native-keep-awake')
     compile project(':react-native-sound')
