--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "^0.51.0",
-    "react-native-background-geolocation": "^2.9.2",
+    "react": "^16.6.3",
+    "react-native": "^0.57.8",
+    "react-native-background-geolocation": "^2.14.2",
     "react-native-blur": "^3.2.2",
     "react-native-keep-awake": "^2.0.6",
     "react-native-sound": "^0.10.4",
-    "react-native-vector-icons": "^4.4.2"
+    "react-native-vector-icons": "4.3.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "^16.6.3"
   },
   "jest": {
     "preset": "react-native"
