--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -39,6 +39,10 @@
 	<string>This app tracks location to continuously navigate through roadways to historic sites</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Accelerometer use increases battery efficiency by intelligently toggling location-tracking</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ionicons.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
