--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-background-fetch": "^4.1.3",
-    "react-native-background-geolocation": "^4.8.2"
+    "react-native-background-geolocation": "^4.8.2",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
