Updated react-native-blur to 4.2.0
Modal works
Swiper.js ViewPropTypes changed to deprecated-react-native-prop-types
Evilicons.ttf imported and linked for header.js
old state works
stylesheets work

--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -42,6 +42,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ionicons.ttf</string>
+		<string>Evilicons.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
