--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.2.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-background-fetch": "^4.1.3",
