--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.70.3",
     "react-native-background-fetch": "^4.1.3",
     "react-native-background-geolocation": "^4.8.2",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
