--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^4.2.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "expo": "^46.0.0",
+    "expo-keep-awake": "~10.2.0",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-background-fetch": "^4.1.3",
     "react-native-background-geolocation": "^4.8.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-sound": "^0.11.2",
-    "react-native-vector-icons": "^9.2.0",
-    "expo": "^46.0.0",
-    "expo-keep-awake": "~10.2.0"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
