--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -37,7 +37,7 @@
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
+				<false/>
 			</dict>
 		</dict>
 	</dict>
