--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -33,7 +33,16 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
-	<dict/>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app tracks location to reliably navigate you through historic sites and roadways</string>
 	<key>NSLocationAlwaysUsageDescription</key>
