--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -87,6 +87,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
