--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -44,18 +44,18 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app tracks location to reliably navigate you through historic sites and roadways</string>
+	<string>This app uses your location to reliably navigate you through historic sites and roadways 2</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This needs to be enabled so you can use Apple Maps without interrupting the tour </string>
+	<string>This needs to be enabled so you can use Apple Maps without interrupting the tour 3</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict>
 		<key>Driving</key>
-		<string>To ensure highest quality for your tour</string>
+		<string>To ensure highest quality for your tour 5</string>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app tracks location to reliably navigate you through historic sites and roadways</string>
+	<string>This app uses your location to reliably navigate you through historic sites and roadways 1</string>
 	<key>NSMotionUsageDescription</key>
-	<string>Uses accelerometer to increase battery efficiency by intelligently toggling location-tracking</string>
+	<string>Uses accelerometer to increase battery efficiency by intelligently toggling location-tracking 4</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ionicons.ttf</string>
