tour.js merged to App.ios.js
popToTop bug with tabBar press on focused page fixed
tour.js merged into App.ios.j
BUG, audio-page breaks when temporary precise location popup appears
L---> repeatively check if geolocation start failed and if so try again
L---> move temporary precise location request to info page
header bug worked on but no solution found

--- a/ios/scout_project/Info.plist
+++ b/ios/scout_project/Info.plist
@@ -24,6 +24,8 @@
 	<string>2</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>tel</string>
@@ -79,6 +81,8 @@
 	</array>
 	<key>UIRequiresFullScreen</key>
 	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -87,8 +91,6 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
